--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,20 @@
 {
+    "version": 2,
+    "builds": [
+      {
+        "src": "package.json",
+        "use": "@vercel/static-build",
+        "config": {
+          "distDir": "dist"
+        }
+      }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "/index.html"
+      }
+    ],
     "build": {
       "env": {
         "NODE_VERSION": "18"
